# logpool-v2

./: CMakeLists.txt  README
logpool/: CMakeLists.txt  logpool.c  logpool.h
logpool/test/: test_logpool.c
mold/: CMakeLists.txt  Makefile  mold.c  mold.h  string_builder.c  string_builder.h
mold/plugins/: file.c  filter.c  multiplexer.c  syslog.c
mold/test/: test_file.c  test_multiplex.c  test_string_builder.cpp
stream/: CMakeLists.txt  stream.c  stream.h
